Update the styling and responsive styling

--- a/assets/sass/app.scss
+++ b/assets/sass/app.scss
@@ -26,9 +26,12 @@
 // *
 @import 'components/page';
 @import 'components/content';
+@import 'components/nav';
 @import 'components/form';
 @import 'components/button';
 @import 'components/icon';
 @import 'components/collection';
 @import 'components/badge';
+@import 'components/overlay';
+@import 'components/grid';
 @import 'components/interaction';
