--- a/assets/sass/base/helpers.scss
+++ b/assets/sass/base/helpers.scss
@@ -1,3 +1,15 @@
 /////////////
 // Helpers //
 /////////////
+
+.color--orange {
+    color: $color-orange;
+}
+
+.color--teal {
+    color: $color-teal;
+}
+
+.color--red {
+    color: $color-red;
+}
