--- a/assets/sass/globals/font-face.scss
+++ b/assets/sass/globals/font-face.scss
@@ -3,7 +3,7 @@
 ///////////////
 
 // This font directory is relative to the output css
-$fontDir: "/../fonts";
+$fontDir: "../fonts";
 
 @font-face {
     font-family: 'ProximaNova';
