--- a/assets/sass/base/layout.scss
+++ b/assets/sass/base/layout.scss
@@ -1,3 +1,67 @@
 ////////////
 // Layout //
 ////////////
+
+.row {
+    @include max-width();
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: flex-start;
+
+    &--reverse {}
+    
+    &--wide {
+        @include max-width(true);
+    }
+
+    .column {
+        display: block;
+        width: 100%;
+    }
+
+    @include bp--s {
+        .column--s {
+            flex-grow: 1;
+            flex-shrink: 0;
+            flex-basis: auto;
+        }
+    }
+
+    @include bp--m {
+        .column--m {
+            flex-grow: 1;
+            flex-shrink: 0;
+            flex-basis: auto;
+
+            &-1-2 {
+                width: 50%;
+            }
+            
+            &-2-5 {
+                width: 40%;
+            }
+            
+            &-3-5 {
+                width: 60%;
+            }
+        }
+    }
+
+    @include bp--l {
+        .column--l {
+            flex-grow: 1;
+            flex-shrink: 0;
+            flex-basis: auto;
+        }
+    }
+
+    @include bp--xl {
+        .column--xl {
+            flex-grow: 1;
+            flex-shrink: 0;
+            flex-basis: auto;
+        }
+    }
+}
