--- a/assets/sass/base/typography.scss
+++ b/assets/sass/base/typography.scss
@@ -14,6 +14,72 @@ h3 {}
 
 h4 {}
 
+h1,
+h2 {
+    font-family: $font-heading;
+    font-style: italic;
+    font-weight: 400;
+}
+
+h3 {
+    font-family: $font-emph;
+    text-transform: uppercase;
+    color: $color-blue;
+}
+
+// **
+// Titles
+// *
+
+.page__title {
+    font-size: 4.0rem;
+    margin-bottom: 1.2rem;
+    
+    @include bp--s {
+        font-size: 4.8rem;
+    }
+    
+    @include bp--m {
+        font-size: 6.0rem;
+    }
+
+    @include bp--l {
+        font-size: 7.2rem;
+        margin-bottom: 1.8rem;
+    }
+}
+
+.section__title {
+    font-size: 3.0rem;
+    line-height: 1.1;
+    
+    @include bp--l {
+        font-size: 4.8rem;
+        line-height: 1;
+    }
+    
+    .title--emph {
+        color: $color-blue;
+    }
+}
+
+.title--emph {
+    font-family: $font-emph;
+    font-style: normal;
+    text-transform: uppercase;
+}
+
+.badge__title {
+    font-size: 2.0rem;
+    line-height: 1;
+    margin-bottom: 1.2rem;
+    
+    @include bp--l {
+        font-size: 3.0rem;
+        margin-bottom: 1.8rem;
+    }
+}
+
 // **
 // Text
 // *
