Add videos and styling

--- a/assets/sass/components/overlay.scss
+++ b/assets/sass/components/overlay.scss
@@ -5,6 +5,16 @@
 .overlay {
     background-size: cover;
     background-position: center center;
+    position: relative;
+}
+
+.overlay__media {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    z-index: -1;
 }
 
 .overlay .section__header {
