--- a/assets/sass/app.scss
+++ b/assets/sass/app.scss
@@ -34,4 +34,5 @@
 @import 'components/badge';
 @import 'components/overlay';
 @import 'components/grid';
+@import 'components/media';
 @import 'components/interaction';
