--- a/assets/sass/components/badge.scss
+++ b/assets/sass/components/badge.scss
@@ -3,12 +3,9 @@
 ///////////
 
 .badge__collection {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    justify-content: flex-start;
-    align-items: center;
+    @extend %clearfix;
     padding-top: 1.8rem;
+    text-align: center;
     
     img {
         margin-left: auto;
@@ -25,12 +22,8 @@
 
 .badge {
     width: 100%;
+    display: block;
     text-align: center;
-    max-width: 13.6rem;
-    
-    @include bp--s {
-        max-width: 16rem;
-    }
     
     @include bp--m {
         max-width: 18.2rem;
@@ -43,18 +36,20 @@
 
 .badge__divider {
     padding: 2.4rem 0;
+    margin-left: auto;
+    margin-right: auto;
     
     .badge__divider--horiz {
         display: none;
     }
     
     .badge__divider--vert {
-        width: 75%;
+        width: 4.8rem;
     }
     
-    @include bp--l {
-        width: 11%;
-        padding-top: 4.2rem;
+    @include bp--m {
+        width: 8%;
+        padding-top: 3.6rem;
         
         .badge__divider--horiz {
             display: block;
@@ -65,13 +60,41 @@
     }
 }
 
+@include bp--m {
+    .badge,
+    .badge__divider {
+        display: inline-block;
+        vertical-align: text-top;
+    }
+}
+
+.badge__content {
+    max-width: 13.6rem;
+    margin-left: auto;
+    margin-right: auto;
+    
+    @include bp--s {
+        max-width: 16rem;
+    }
+    
+    @include bp--m {
+        max-width: 18.2rem;
+    }
+}
+
 .badge__media {
     padding: 0 1.8rem;
     margin-bottom: 0.6rem;
+    margin-left: auto;
+    margin-right: auto;
     
     @include bp--l {
         padding: 0;
         height: 14.4rem;
         margin-bottom: 1.2rem;
+    }
+    
+    img {
+        max-height: 14.4rem;
     }
 }
