--- a/assets/sass/components/grid.scss
+++ b/assets/sass/components/grid.scss
@@ -3,23 +3,39 @@
 //////////
 
 .grid {
-    justify-content: space-between;
+    @extend %clearfix;
+    text-align: center;
 }
 
 .grid__item {
-    flex-basis: auto;
-    flex-shrink: 0;
-    flex-grow: 1;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: center;
-    align-items: center;
+    text-align: center;
     width: 21%;
-    margin: 0.9rem 6%;
+    margin: 0.9rem 5%;
+    display: inline-block;
+    vertical-align: middle;
+    position: relative;
+    height: 3.6rem;
+    
+    @include bp--s {
+        height: 4.8rem;
+    }
+    
+    @include bp--m {
+        height: 6.4rem;
+    }
+    
+    @include bp--m {
+        height: 7.8rem;
+    }
     
     img {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
         max-height: 3.6rem;
+        margin-left: auto;
+        margin-right: auto;
         
         @include bp--s {
             max-height: 4.8rem;
