--- a/assets/sass/components/form.scss
+++ b/assets/sass/components/form.scss
@@ -130,7 +130,7 @@
     
     + .form__label {
         color: $color-light;
-        position: relative;
+        position: absolute;
         top: 50%;
         left: 0;
         font-size: 1.0rem;
