--- a/assets/sass/globals/reset.scss
+++ b/assets/sass/globals/reset.scss
@@ -64,6 +64,10 @@ hr {
     clear:both;
 }
 
+input, button, select, textarea {
+    margin: 0;
+}
+
 input, select {
     vertical-align:middle;
 }
