--- a/assets/sass/base/typography.scss
+++ b/assets/sass/base/typography.scss
@@ -34,6 +34,7 @@ h3 {
 .page__title {
     font-size: 4.0rem;
     margin-bottom: 1.2rem;
+    text-shadow: 0 0.3rem 0.3rem rgba($color-dark, 0.1);
     
     @include bp--s {
         font-size: 4.8rem;
