--- a/assets/sass/components/page.scss
+++ b/assets/sass/components/page.scss
@@ -59,6 +59,7 @@
 
 .page__section {
     padding: 3.6rem 0 5.4rem;
+    background: $color-white;
     
     @include bp--l {
         padding: 12.4rem 0 16.4rem;
