Handle styling QA

--- a/assets/sass/base/layout.scss
+++ b/assets/sass/base/layout.scss
@@ -8,19 +8,16 @@
 
     &--wide {
         @include max-width(true);
+        
+        .row--wide {
+            padding-left: 0;
+            padding-right: 0;
+        }
     }
 
     .column {
         display: block;
         width: 100%;
-    }
-
-    @include bp--s {
-        .column--s {
-            flex-grow: 1;
-            flex-shrink: 0;
-            flex-basis: auto;
-        }
     }
 
     @include bp--m {
@@ -31,30 +28,25 @@
             &-1-2 {
                 width: 50%;
             }
-            
-            &-2-5 {
-                width: 40%;
-            }
-            
-            &-3-5 {
-                width: 60%;
-            }
         }
     }
 
-    @include bp--l {
-        .column--l {
-            flex-grow: 1;
-            flex-shrink: 0;
-            flex-basis: auto;
-        }
-    }
-
-    @include bp--xl {
-        .column--xl {
-            flex-grow: 1;
-            flex-shrink: 0;
-            flex-basis: auto;
-        }
-    }
+    // @include bp--l {
+    //     .column--l {
+    //         display: inline-block;
+    //         float: left;
+    //         
+    //         &-1-2 {
+    //             width: 50%;
+    //         }
+    //         
+    //         &-2-5 {
+    //             width: 40%;
+    //         }
+    //         
+    //         &-3-5 {
+    //             width: 60%;
+    //         }
+    //     }
+    // }
 }
