--- a/assets/sass/components/overlay.scss
+++ b/assets/sass/components/overlay.scss
@@ -6,6 +6,17 @@
     background-size: cover;
     background-position: center center;
     position: relative;
+    
+    &:after {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        z-index: -2;
+        background: $color-blue;
+    }
 }
 
 .overlay__media {
@@ -15,6 +26,7 @@
     height: 100%;
     width: 100%;
     z-index: -1;
+    opacity: 0.6;
 }
 
 .overlay .section__header {
