--- a/assets/sass/components/page.scss
+++ b/assets/sass/components/page.scss
@@ -3,9 +3,13 @@
 //////////
 
 .page__header {
-    padding-bottom: 2.4rem;
+    padding-bottom: 4.8rem;
     
     @include bp--l {
+        padding-bottom: 7.2rem;
+    }
+    
+    @include bp--xl {
         padding-bottom: 12.4rem;
     }
 
@@ -19,11 +23,16 @@
         max-width: 43rem;
         
         @include bp--m {
-            max-width: 100%;
+            max-width: 52rem;
         }
         
-        @include bp--l {
-            max-width: 104rem;
+        @include bp--xl {
+            @include max-width();
+            .column {
+                display: inline-block;
+                float: left;
+                width: 50%;
+            }
         }
     }
 
@@ -35,6 +44,10 @@
             margin-bottom: 2.0rem;
             
             @include bp--l {
+                font-size: 2.0rem;
+            }
+            
+            @include bp--xl {
                 font-size: 2.8rem;
             }
         }
@@ -50,7 +63,7 @@
     
     .form {
         @include bp--l {
-            padding-top: 1.8rem;
+            padding-top: 2.0rem;
             padding-left: 1.8rem;
             padding-right: 0.6rem;
         }
@@ -58,16 +71,18 @@
 }
 
 .page__section {
-    padding: 3.6rem 0 5.4rem;
+    padding-top: 3.6rem;
+    padding-bottom: 5.4rem;
     background: $color-white;
     
     @include bp--l {
-        padding: 12.4rem 0 16.4rem;
+        padding-top: 12.4rem;
+        padding-bottom: 16.4rem;
     }
     
     .section__header {
         color: $color-light-blue;
-        padding: 0 3.0rem;
+        // padding: 0 3.0rem;
         padding-bottom: 3.0rem;
         
         @include bp--l {
@@ -90,14 +105,31 @@
             padding-bottom: 9.0rem;
         }
         
-        .form,
-        .section__footer {
-            padding-right: 2.4rem;
-            padding-left: 2.4rem;
-        }
+        // .form,
+        // .section__footer {
+        //     padding-right: 2.4rem;
+        //     padding-left: 2.4rem;
+        // }
         
         .form {
-            margin-bottom: 2.4rem;
+            max-width: 43rem;
+            margin-left: auto;
+            margin-right: auto;
+            margin-bottom: 3.6rem;
+            
+            @include bp--m {
+                max-width: 52rem;
+            }
+            
+            @include bp--xl {
+                max-width: 100%;
+                
+                .column {
+                    display: inline-block;
+                    float: left;
+                    width: 50%;
+                }
+            }
         }
         
         .section__header {
@@ -115,5 +147,13 @@
                 font-size: 1.4rem;
             }
         }
+    }
+}
+
+.section__header {
+    text-align: center;
+    
+    &--align-left {
+        text-align: left;
     }
 }
