--- a/assets/sass/components/grid.scss
+++ b/assets/sass/components/grid.scss
@@ -15,17 +15,19 @@
     vertical-align: middle;
     position: relative;
     height: 3.6rem;
+    transition: transform 0.5s;
+    transform: translateZ(0);
     
     @include bp--s {
         height: 4.8rem;
     }
     
     @include bp--m {
-        height: 6.4rem;
+        height: 7.8rem;
     }
     
-    @include bp--m {
-        height: 7.8rem;
+    @include bp--l {
+        transform: translateZ(0) scale(0.8);
     }
     
     img {
