--- a/assets/sass/components/media.scss
+++ b/assets/sass/components/media.scss
@@ -2,25 +2,53 @@
 // Media //
 ///////////
 
-.media__video {
-    position: absolute;
-    top: 50%;
+.media__video,
+.media__video--fallback {
+    position: fixed;
+    top: 0;
     left: 50%;
-    width: 177.7%;
-    min-height: 100%;
+    height: 60.0rem;
     z-index: -1;
-    transform: translate(-50%, -50%);
-    background: url(../media/background-1.jpg) no-repeat;
-    background-size: cover;
+    transform: translate(-50%, 0);
+    
+    @include bp--m {
+        height: 77.9rem;
+    }
     
     @include bp--l {
-        min-height: 106.1rem;
+        height: 83.5rem;
     }
 
     @include bp(1400) {
+        height: auto;
         min-width: 100%;
         min-height: 100%;
+        left: 0;
+        transform: none;
         height: auto;
         width: auto;
+    }
+}
+
+.media__video--fallback {
+    background: url(../media/background-1.jpg) no-repeat;
+    background-size: cover;
+    z-index: -2;
+}
+
+video {
+    &::-webkit-media-controls-panel {
+      display: none!important;
+      -webkit-appearance: none;
+    }
+    
+    &::--webkit-media-controls-play-button {
+      display: none!important;
+      -webkit-appearance: none;
+    }
+    
+    &::-webkit-media-controls-start-playback-button {
+      display: none!important;
+      -webkit-appearance: none;
     }
 }
