--- a/assets/sass/components/media.scss
+++ b/assets/sass/components/media.scss
@@ -52,3 +52,70 @@ video {
       -webkit-appearance: none;
     }
 }
+
+.media__loader--holder {
+    position: fixed;
+    display: inline-block;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 3;
+    opacity: 1;
+    transition: opacity 0.3s;
+}
+
+.media__loader {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: inline-block;
+    border-radius: 50%;
+    z-index: 1;
+    vertical-align: middle;
+    pointer-events: none;
+}
+
+.media__loader--outside {
+    border: 0.3em solid transparent;
+    border-left-color: rgba($color-red, 0.7);
+    border-right-color: rgba($color-red, 0.7);
+    animation: 0.8s loader-outside ease-in-out infinite;
+    height: 4.5rem;
+    width: 4.5rem;
+
+    @keyframes loader-outside {
+        0% {
+            transform: translate(-50%, -50%) rotate(0deg);
+            opacity: 0;
+        }
+
+        50% {
+            opacity: 1;
+        }
+
+        100% {
+            transform: translate(-50%, -50%) rotate(180deg);
+            opacity: 0;
+        }
+    }
+}
+
+.media__loader--inside {
+    border: 0.35em solid transparent;
+    border-left-color: $color-red;
+    border-right-color: $color-red;
+    animation: 0.35s loader-inside linear infinite;
+    width: 3.0rem;
+    height: 3.0rem;
+    
+    @keyframes loader-inside {
+        0% {
+            transform: translate(-50%, -50%) rotate(-0deg);
+        }
+
+        100% {
+            transform: translate(-50%, -50%) rotate(-180deg);
+        }
+    }
+}
