--- a/assets/sass/components/grid.scss
+++ b/assets/sass/components/grid.scss
@@ -5,6 +5,15 @@
 .grid {
     @extend %clearfix;
     text-align: center;
+    
+    @include bp--m {
+        transition: padding-left 0.5s, padding-right 0.5s;
+        
+        &.row--wide {
+            padding-left: 10.0rem;
+            padding-right: 10.0rem;
+        }
+    }
 }
 
 .grid__item {
@@ -15,8 +24,6 @@
     vertical-align: middle;
     position: relative;
     height: 3.6rem;
-    transition: transform 0.5s;
-    transform: translateZ(0);
     
     @include bp--s {
         height: 4.8rem;
@@ -24,10 +31,6 @@
     
     @include bp--m {
         height: 7.8rem;
-    }
-    
-    @include bp--l {
-        transform: translateZ(0) scale(0.8);
     }
     
     img {
