--- a/assets/sass/components/interaction.scss
+++ b/assets/sass/components/interaction.scss
@@ -22,9 +22,9 @@
 }
 
 .interaction--scale {
-    transform: translateZ(0) scale(1.2);
-    
-    @include bp--l {
-        transform: translateZ(0) scale(1);
+    @include bp--m {
+        padding-left: 0 !important;
+        padding-right: 0 !important;
+        transform: translateZ(0);
     }
 }
