--- a/assets/sass/globals/variables.scss
+++ b/assets/sass/globals/variables.scss
@@ -26,7 +26,7 @@ $color-blue      : #1F485B;
 $color-light-blue: #577282;
 $color-teal      : #03A5A5;
 $color-orange    : #F2A74B;
-$color-red       : #D81E1E;
+$color-red       : #F4523E;
 
 
 // **
