--- a/assets/sass/components/grid.scss
+++ b/assets/sass/components/grid.scss
@@ -7,11 +7,18 @@
     text-align: center;
     
     @include bp--m {
-        transition: padding-left 0.5s, padding-right 0.5s;
+        transition: padding-left 0.3s, padding-right 0.3s;
+        transition-timing-function: ease-in;
         
         &.row--wide {
-            padding-left: 10.0rem;
-            padding-right: 10.0rem;
+            padding-left: 4.8rem;
+            padding-right: 4.8rem;
+            
+            &.interaction--scale {
+                padding-left: 0 !important;
+                padding-right: 0 !important;
+                transform: translateZ(0);
+            }
         }
     }
 }
