--- a/assets/sass/globals/variables.scss
+++ b/assets/sass/globals/variables.scss
@@ -17,7 +17,6 @@ $base-lineheight   : 1.2;
 // COLORS
 // *
 $color-dark       : #0C0C0C;
-$color-dark-alt   : #222222;
 $color-med        : #a5a4a3;
 $color-light      : #F2F2F2;
 $color-white      : #FFFFFF;
@@ -27,7 +26,7 @@ $color-blue      : #1F485B;
 $color-light-blue: #577282;
 $color-teal      : #03A5A5;
 $color-orange    : #F2A74B;
-$color-red       : #D81E1E;
+$color-red       : #F4523E;
 
 
 // **
