--- a/assets/sass/base/typography.scss
+++ b/assets/sass/base/typography.scss
@@ -26,19 +26,18 @@ h3 {
 .page__title {
     font-size: 4.0rem;
     margin-bottom: 1.2rem;
-    text-shadow: 0 0.3rem 0.3rem rgba($color-dark, 0.1);
     
     @include bp--s {
         font-size: 4.8rem;
     }
     
     @include bp--m {
-        font-size: 6.0rem;
+        font-size: 5.4rem;
     }
 
-    @include bp--l {
+    @include bp--xl {
         font-size: 7.2rem;
-        margin-bottom: 1.8rem;
+        margin-bottom: 2.4rem;
     }
 }
 
@@ -60,6 +59,7 @@ h3 {
     font-family: $font-emph;
     font-style: normal;
     text-transform: uppercase;
+    letter-spacing: -0.03em;
 }
 
 .badge__title {
