--- a/assets/sass/components/grid.scss
+++ b/assets/sass/components/grid.scss
@@ -5,6 +5,22 @@
 .grid {
     @extend %clearfix;
     text-align: center;
+    
+    @include bp--m {
+        transition: padding-left 0.3s, padding-right 0.3s;
+        transition-timing-function: ease-in;
+        
+        &.row--wide {
+            padding-left: 4.8rem;
+            padding-right: 4.8rem;
+            
+            &.interaction--scale {
+                padding-left: 0 !important;
+                padding-right: 0 !important;
+                transform: translateZ(0);
+            }
+        }
+    }
 }
 
 .grid__item {
@@ -18,10 +34,6 @@
     
     @include bp--s {
         height: 4.8rem;
-    }
-    
-    @include bp--m {
-        height: 6.4rem;
     }
     
     @include bp--m {
