--- a/assets/sass/components/page.scss
+++ b/assets/sass/components/page.scss
@@ -3,9 +3,13 @@
 //////////
 
 .page__header {
-    padding-bottom: 2.4rem;
+    padding-bottom: 4.8rem;
     
     @include bp--l {
+        padding-bottom: 7.2rem;
+    }
+    
+    @include bp--xl {
         padding-bottom: 12.4rem;
     }
 
@@ -18,12 +22,17 @@
     .header__container {
         max-width: 43rem;
         
-        @include bp--m {
-            max-width: 100%;
+        @include bp(850) {
+            max-width: 68rem;
         }
         
-        @include bp--l {
-            max-width: 104rem;
+        @include bp--xl {
+            @include max-width();
+            .column {
+                display: inline-block;
+                float: left;
+                width: 50%;
+            }
         }
     }
 
@@ -35,6 +44,10 @@
             margin-bottom: 2.0rem;
             
             @include bp--l {
+                font-size: 2.0rem;
+            }
+            
+            @include bp--xl {
                 font-size: 2.8rem;
             }
         }
@@ -43,14 +56,14 @@
             padding-right: 4.8rem;
         }
         
-        @include bp--l {
+        @include bp--xl {
             padding-right: 7.2rem;
         }
     }
     
     .form {
-        @include bp--l {
-            padding-top: 1.8rem;
+        @include bp--xl {
+            padding-top: 2.0rem;
             padding-left: 1.8rem;
             padding-right: 0.6rem;
         }
@@ -58,16 +71,17 @@
 }
 
 .page__section {
-    padding: 3.6rem 0 5.4rem;
+    padding-top: 3.6rem;
+    padding-bottom: 5.4rem;
     background: $color-white;
     
     @include bp--l {
-        padding: 12.4rem 0 16.4rem;
+        padding-top: 12.4rem;
+        padding-bottom: 16.4rem;
     }
     
     .section__header {
         color: $color-light-blue;
-        padding: 0 3.0rem;
         padding-bottom: 3.0rem;
         
         @include bp--l {
@@ -78,6 +92,7 @@
     &--grid {
         padding-top: 3.9rem;
         padding-bottom: 4.8rem;
+        background-image: url('../media/background-2.jpg');
         
         @include bp--l {
             padding-bottom: 9.0rem;
@@ -85,19 +100,32 @@
     }
     
     &--form {
+        background-image: url('../media/background-3.jpg');
+        
         @include bp--l {
             padding-top: 8.4rem;
             padding-bottom: 9.0rem;
         }
         
-        .form,
-        .section__footer {
-            padding-right: 2.4rem;
-            padding-left: 2.4rem;
-        }
-        
         .form {
-            margin-bottom: 2.4rem;
+            max-width: 43rem;
+            margin-left: auto;
+            margin-right: auto;
+            margin-bottom: 3.6rem;
+            
+            @include bp(850) {
+                max-width: 100%;
+                
+                .column {
+                    display: inline-block;
+                    float: left;
+                    width: 50%;
+                    
+                    + .column {
+                        padding-left: 1px;
+                    }
+                }
+            }
         }
         
         .section__header {
@@ -115,5 +143,13 @@
                 font-size: 1.4rem;
             }
         }
+    }
+}
+
+.section__header {
+    text-align: center;
+    
+    &--align-left {
+        text-align: left;
     }
 }
