--- a/assets/sass/components/page.scss
+++ b/assets/sass/components/page.scss
@@ -62,7 +62,14 @@
     }
     
     .form {
+        margin-bottom: 4.2rem; 
+
+        @include bp--m {
+            margin-bottom: 9.2rem;
+        }
+
         @include bp--xl {
+            margin-bottom: 0;
             padding-top: 2.0rem;
             padding-left: 1.8rem;
             padding-right: 0.6rem;
