Fix IE Support (#10)
* Handle Events gracefully

* Improve form styling

* Standardize js imports

* Increment app.css and app.js

* Remove any traces of flexbox

* Increment app.css

* Fix z-index positioning on checkbox/select

* Add ie.css

* Add classList shim and detect ie11 and below

* Increment js and css

* Add transformZ(0) and backface-visibility to interaction load elements

* Add page header form margin for smaller screen

* Add improved classList poly. Add customEvent poly. Modify form.js and load.js to use

* Increment app.css and app.js

--- a/assets/sass/components/form.scss
+++ b/assets/sass/components/form.scss
@@ -11,10 +11,6 @@
         max-width: 100%;
         margin-left: 0;
         margin-right: 0;
-
-        &.row {
-            flex-wrap: nowrap;
-        }
     }
     
     @include bp--xl {
@@ -64,17 +60,12 @@
 
 .form__group {
     display: table-row;
-    
-    &.row {
-        flex-wrap: nowrap;
-        align-items: stretch;
-    }
 }
 
 .form__group .group__item {
     color: $color-light;
     display: table-cell;
-    vertical-align: top;
+    vertical-align: middle;
 
     &--checkbox {
         height: 4.4rem;
@@ -138,14 +129,13 @@
     
     + .form__label {
         color: $color-light;
-        position: absolute;
-        top: 50%;
-        left: 0;
         font-size: 1.0rem;
         padding-left: 3.0rem;
         padding-right: 2.4rem;
-        transform: translate(0, -50%);
-        
+        top: 0;
+        left: 0;
+        position: relative;
+        z-index: 1;
         @include bp--m {
             font-size: 1.6rem;
             padding-left: 4.8rem;
@@ -211,7 +201,7 @@ select[data-ss-uuid] {
     display: block;
     position: relative;
     width: 100%;
-    z-index: 1;
+    z-index: 2;
 
     &,
     * {
