Fix src/link mapping for nested pages in reusable components

--- a/assets/templates/pages/index.html
+++ b/assets/templates/pages/index.html
@@ -8,14 +8,14 @@
 <header class="page__header overlay interaction--load">
   <div class="overlay__media">
       <video playsinline autoplay muted loop class="media__video" controls="false">
-          <source src="media/videos/HeroBG.webm" type="video/webm">
-          <source src="media/videos/HeroBG.mp4" type="video/mp4">
+          <source src="/media/videos/HeroBG.webm" type="video/webm">
+          <source src="/media/videos/HeroBG.mp4" type="video/mp4">
       </video>
       <div class="media__video--fallback"></div>
   </div>
   <nav class="row row--wide nav nav--main">
       <div class="nav__brand">
-          <img src="media/go2-broadband-logo.png" width="312" alt="Kyrio - GO2Broadband">
+          <img src="/media/go2-broadband-logo.png" width="312" alt="Kyrio - GO2Broadband">
           <p>Cable Service Locator</p>
       </div>
   </nav>
@@ -67,7 +67,7 @@
     <section class="row section__content badge__collection">
         <div class="badge">
             <div class="badge__media">
-                <img src="media/search-graphic.png" alt="">
+                <img src="/media/search-graphic.png" alt="">
             </div>
             <header class="badge__header">
                 <h3 class="badge__title">Search</h3>
@@ -84,7 +84,7 @@
 
         <div class="badge">
             <div class="badge__media">
-                <img src="media/setup-graphic.png" alt="">
+                <img src="/media/setup-graphic.png" alt="">
             </div>
             <header class="badge__header">
                 <h3 class="badge__title">Setup</h3>
@@ -101,7 +101,7 @@
 
         <div class="badge">
             <div class="badge__media">
-                <img src="media/schedule-graphic.png" alt="">
+                <img src="/media/schedule-graphic.png" alt="">
             </div>
             <header class="badge__header">
                 <h3 class="badge__title">Schedule</h3>
